--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -50,4 +50,5 @@
     <string name="register"><u>Register</u></string>
     <string name="delete_recipe_text">Delete recipe</string>
     <string name="edit_recipe_text">Edit recipe</string>
+    <string name="done_string">Done</string>
 </resources>
