--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,7 +42,7 @@
     <!-- Strings related to login -->
     <string name="prompt_email">Email</string>
     <string name="prompt_password">Password</string>
-    <string name="action_sign_in">Sign in or register</string>
+    <string name="action_sign_in">Login</string>
     <string name="action_sign_in_google">Sign in with Google</string>
     <string name="action_sign_in_short">Sign in</string>
     <string name="welcome">"Welcome!"</string>
@@ -54,4 +54,8 @@
     <string name="edit_recipe_text">Edit recipe</string>
     <string name="done_string">Done</string>
     <string name="title_activity_user_profile">UserProfileActivity</string>
+    <string name="welcome_txt">Welcome</string>
+    <string name="or_txt">Or</string>
+    <string name="don_t_have_an_account">Don’t have an account? </string>
+    <string name="register_text">Register</string>
 </resources>
