--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -74,4 +74,10 @@
     <string name="ingredient_title">Ingredient title</string>
     <string name="quantity">Quantity</string>
     <string name="invalid_ingredient_data">Invalid ingredient data</string>
+    <string name="invalid_ingredient_quantity">Invalid ingredient quantity</string>
+    <string name="authentication_failed">Authentication failed.</string>
+    <string name="something_went_wrong">Oops... something went wrong</string>
+    <string name="permissions_not_granted_by_the_user">Permissions not granted by the user.</string>
+    <string name="permission_denied">Permission denied</string>
+    <string name="cookup">CookUp</string>
 </resources>
