change app name string

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Recipes</string>
+    <string name="app_name">Cook Up</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="web_client_id" translatable="false">5825267437-km8ku74ub8j2hobubjdhrjqochoa7iab.apps.googleusercontent.com</string>
 
